-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
6335
I got following warnings:
================================================
[ BUG: lock held when returning to user space! ]
3.6.0-rc3 #1 Tainted: G O
------------------------------------------------
bash/1868 is leaving the kernel with locks still held!
1 lock held by bash/1868:
#0: (&res->lr_lvb_mutex)
, at: [<ffffffffa041a18c>] ldlm_resource_get+0x2cc/0x880 [ptlrpc]